tried to make valid json/yaml for fixtures import but failed

--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -17,6 +17,7 @@ gunicorn = "==20.0.4"
 django-summernote = "*"
 django-allauth = "==0.41.0"
 django-taggit = "*"
+pyyaml = "*"
 
 [requires]
 python_version = "3"
