--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -16,8 +16,8 @@ psycopg2 = "==2.8.5"
 gunicorn = "==20.0.4"
 django-summernote = "*"
 django-allauth = "==0.41.0"
-django-taggit = "*"
-pyyaml = "*"
+django-taggit = "==1.2.0"
+pyyaml = "==5.3.1"
 
 [requires]
 python_version = "3"
