--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+django-debug-toolbar = "==2.2"
 
 [packages]
 django = "==2.2.12"
