--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -8,14 +8,14 @@ django-debug-toolbar = "==2.2"
 
 [packages]
 django = "==2.2.12"
-wagtail = "==2.8.2"
+wagtail = "==2.9"
 django-cookie-consent = "==0.2.0"
 djangorestframework = "==3.11.0"
 subdomains = "==3.0.1"
 wagtailmenus = "==3.0.1"
 psycopg2 = "==2.8.5"
 gunicorn = "==20.0.4"
-django-summernote = "*"
+django-summernote = "==0.8.11.6"
 django-allauth = "==0.41.0"
 django-taggit = "==1.2.0"
 pyyaml = "==5.3.1"
