- remove testdev domain from nginx config - prep cert placeholders commented out for production

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,8 +66,7 @@ http {
     listen [::]:80; # ipv6 listening for upgrade to https redirect
     root /var/www/;
 
-    server_name arcstest.brierjon.com
-                medborgarforskning.se
+    server_name medborgarforskning.se
                 www.medborgarforskning.se
                 dev.medborgarforskning.se
                 ;
@@ -117,8 +116,6 @@ http {
      ### BEGIN Dev-Test manual transitional certificates - TODO remove this block before release ###
      ssl_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem; # /path/to/signed_cert_plus_intermediates for dev subdomain
      ssl_certificate_key /etc/letsencrypt/live/dev.medborgarforskning.se/privkey.pem; # /path/to/private_key for dev subdomain
-     #ssl_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem; # /path/to/signed_cert_plus_intermediates for alternative dev subdomain
-     #ssl_certificate_key /etc/letsencrypt/live/arcstest.brierjon.com/privkey.pem; # /path/to/private_key for alternative dev subdomain
      ### END Dev-Test manual transitional certificates
 
      ### OCSP stapling
@@ -127,8 +124,9 @@ http {
 
      ### verify chain of trust of OCSP response using Root CA and Intermediate certs - with LetsEncrypt set to chain.pem
      # ssl_trusted_certificate /path/to/root_CA_cert_plus_intermediates;
+     #ssl_trusted_certificate /etc/letsencrypt/live/medborgarforskning.se/fullchain.pem;
+     #ssl_trusted_certificate /etc/letsencrypt/live/www.medborgarforskning.se/fullchain.pem;
      ssl_trusted_certificate /etc/letsencrypt/live/dev.medborgarforskning.se/fullchain.pem;
-     #ssl_trusted_certificate /etc/letsencrypt/live/arcstest.brierjon.com/fullchain.pem;
 
      ssl_session_timeout 1d;
      ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
@@ -154,8 +152,7 @@ http {
      ##### Begin application configuration #####
      ### set the valid host names that this server will handle (name1 name2 name3)
      ### Insert the naked domain name (ie. medborgarforskning.se), www subdomain (ie www.medborgarforskning.se), other subdomains. A wildcard is not supported with by ARCS automatic certificate generation at this time (ie *.medborgarforskning.se) due to DNS provider support being required and additional development needed. https://letsencrypt.org/docs/challenge-types/ # TODO verify all subdomains needed are listed.
-     server_name arcstest.brierjon.com
-                 medborgarforskning.se
+     server_name medborgarforskning.se
                  www.medborgarforskning.se
                  dev.medborgarforskning.se
                  ;
@@ -168,7 +165,7 @@ http {
 
      ### prevent image hotlinking from 3rd parties # TODO reenable after domain names are used
      #location ~ .(webp|png|gif|jpe?g)$ {
-       #valid_referers none blocked medborgarforskning.se dev.medborgarforskning.se arcstest.brierjon.com; # place valid domain name. Recommend one per line for readability.
+       #valid_referers none blocked medborgarforskning.se dev.medborgarforskning.se; # place valid domain name. Recommend one per line for readability.
        #if ($invalid_referer) {
        #  return   403;
        #  }
@@ -242,9 +239,9 @@ http {
 
      ### Content Security Policy #TODO finish Content Security Policy Analysis check against https://observatory.mozilla.org/
      ### Reporting Only - TODO cleanup for modularity of domains and add as header in dev environment
-     # add_header Content-Security-Policy-Report-Only "default-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; script-src-attr 'none'; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; style-src-elem 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com fonts.googleapis.com stackpath.bootstrapcdn.com; style-src-attr 'none'; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; block-all-mixed-content; sandbox; base-uri 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se";
+     # add_header Content-Security-Policy-Report-Only "default-src 'self' medborgarforskning.se dev.medborgarforskning.se; script-src 'self' medborgarforskning.se dev.medborgarforskning.se; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; script-src-attr 'none'; style-src 'self' medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; style-src-elem 'self' medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com fonts.googleapis.com stackpath.bootstrapcdn.com; style-src-attr 'none'; img-src 'self' medborgarforskning.se dev.medborgarforskning.se; font-src 'self' medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; connect-src 'none'; media-src 'none'; object-src 'none'; prefetch-src 'self' medborgarforskning.se dev.medborgarforskning.se; frame-src 'none'; worker-src 'none'; frame-ancestors 'none'; form-action 'self' medborgarforskning.se dev.medborgarforskning.se; block-all-mixed-content; sandbox; base-uri 'self' medborgarforskning.se dev.medborgarforskning.se; manifest-src 'self' medborgarforskning.se dev.medborgarforskning.se";
      ### Enforced Content Security Policy Values
-     add_header Content-Security-Policy "upgrade-insecure-requests; default-src https testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; script-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com cdn.jsdelivr.net code.jquery.com; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; style-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; img-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se; font-src 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; style-src-elem 'self' testdev.brierjon.com medborgarforskning.se dev.medborgarforskning.se cdn.jsdelivr.net code.jquery.com fonts.googleapis.com stackpath.bootstrapcdn.com";
+     add_header Content-Security-Policy "upgrade-insecure-requests; default-src https medborgarforskning.se dev.medborgarforskning.se; script-src 'self' medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com cdn.jsdelivr.net code.jquery.com; script-src-elem 'self' code.jquery.com cdn.jsdelivr.net stackpath.bootstrapcdn.com; style-src 'self' medborgarforskning.se dev.medborgarforskning.se stackpath.bootstrapcdn.com; img-src 'self' medborgarforskning.se dev.medborgarforskning.se; font-src 'self' medborgarforskning.se dev.medborgarforskning.se fonts.googleapis.com fonts.gstatic.com; style-src-elem 'self' medborgarforskning.se dev.medborgarforskning.se cdn.jsdelivr.net code.jquery.com fonts.googleapis.com stackpath.bootstrapcdn.com";
 
      ### Dev Default Behavior for referrals
      ## TODO adding for now at server level, but will move to application level for finer level of control per content
