--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -135,7 +135,7 @@ http {
      ### modern configuration
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-     ssl_prefer_server_ciphers on; # modern suggests off if you only use TLSv1.3
+     ssl_prefer_server_ciphers off; # modern suggests off if you only use TLSv1.3
 
      ### HSTS (ngx_http_headers_module is required) (63072000 seconds is recommended for production)
      ## enable for inclusion of your domain in browsers to only use https - opt-in by enabling the preload version of the header below
