Dockerfile ensure translations are compiled and available

--- a/ArcsSystem/Dockerfile
+++ b/ArcsSystem/Dockerfile
@@ -40,6 +40,9 @@ RUN rm -r /var/www/arcs_collected_static/static/
 
 # TODO print to console = Bye Bye Old Static Files - Empty! Note: this is a static statement and not a check.
 
+# make sure the translation strings are compiled
+RUN python manage.py compilemessages
+
 # collectstatic static on build (but you'll need to run a commands if you're not rebuilding on project code changes)
 RUN python manage.py collectstatic --noinput
 
