--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -20,6 +20,7 @@ django-allauth = "==0.42.0"
 django-taggit = "==1.3.0"
 pyyaml = "==5.3.1"
 django-modeltranslation = "==0.15.1"
+django-countries = "==6.1.2"
 
 [requires]
 python_version = "3"
