--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -21,6 +21,7 @@ django-taggit = "==1.3.0"
 pyyaml = "==5.3.1"
 django-modeltranslation = "==0.15.1"
 wagtail-modeltranslation = "==0.10.13"
+django_cron = "==0.5.1"
 
 [requires]
 python_version = "3"
