--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -18,6 +18,7 @@ django-allauth = "==0.42.0"
 django-taggit = "==1.3.0"
 pyyaml = "==5.3.1"
 django-modeltranslation = "==0.15.1"
+bleach = "==3.2.1"
 
 [requires]
 python_version = "3"
