--- a/ArcsSystem/requirements.txt
+++ b/ArcsSystem/requirements.txt
@@ -1,11 +1,12 @@
 -i https://pypi.org/simple
 bleach==3.2.1
-certifi==2020.6.20
+certifi==2020.11.8
 chardet==3.0.4
 defusedxml==0.6.0
 django-allauth==0.42.0
 django-appconf==1.0.4
 django-cookie-consent==0.2.6
+django-countries==6.1.3
 django-modeltranslation==0.15.1
 django-summernote==0.8.11.6
 django-taggit==1.3.0
@@ -15,15 +16,17 @@ gunicorn==20.0.4
 idna==2.10
 oauthlib==3.1.0
 packaging==20.4
+pillow==8.0.1
 psycopg2==2.8.5
 pyparsing==2.4.7
 python3-openid==3.2.0
-pytz==2020.1
+pytz==2020.4
 pyyaml==5.3.1
 requests-oauthlib==1.3.0
-requests==2.24.0
+requests==2.25.0
 six==1.15.0
 sqlparse==0.4.1
 subdomains==3.0.1
-urllib3==1.25.11
+urllib3==1.26.2
 webencodings==0.5.1
+wikidata==0.7.0
