--- a/ArcsSystem/Pipfile
+++ b/ArcsSystem/Pipfile
@@ -11,7 +11,6 @@ django = "==2.2.16"
 django-cookie-consent = "==0.2.6"
 djangorestframework = "==3.11.0"
 subdomains = "==3.0.1"
-psycopg2 = "==2.8.5"
 gunicorn = "==20.0.4"
 django-summernote = "==0.8.11.6"
 django-allauth = "==0.42.0"
@@ -19,6 +18,7 @@ django-taggit = "==1.3.0"
 pyyaml = "==5.3.1"
 django-modeltranslation = "==0.15.1"
 bleach = "==3.2.1"
-
+wikidata = "==0.7.0"
+pillow = "==8.0.1"
 [requires]
 python_version = "3"
