--- a/ArcsSystem/requirements.txt
+++ b/ArcsSystem/requirements.txt
@@ -1,11 +1,12 @@
 -i https://pypi.org/simple
 bleach==3.2.1
-certifi==2020.6.20
-chardet==3.0.4
+certifi==2020.12.5
+chardet==4.0.0
 defusedxml==0.6.0
 django-allauth==0.42.0
 django-appconf==1.0.4
 django-cookie-consent==0.2.6
+django-livesync==0.5
 django-modeltranslation==0.15.1
 django-summernote==0.8.11.6
 django-taggit==1.3.0
@@ -14,16 +15,20 @@ djangorestframework==3.11.0
 gunicorn==20.0.4
 idna==2.10
 oauthlib==3.1.0
-packaging==20.4
-psycopg2==2.8.5
+packaging==20.8
+pillow==8.0.1
 pyparsing==2.4.7
 python3-openid==3.2.0
-pytz==2020.1
+pytz==2020.5
 pyyaml==5.3.1
 requests-oauthlib==1.3.0
-requests==2.24.0
+requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
 subdomains==3.0.1
-urllib3==1.25.11
+tornado==6.1
+urllib3==1.26.2
+watchdog==1.0.2
 webencodings==0.5.1
+websocket-client==0.57.0
+wikidata==0.7.0
