--- a/ArcsSystem/requirements.txt
+++ b/ArcsSystem/requirements.txt
@@ -2,7 +2,8 @@
 bleach==3.2.1
 certifi==2020.12.5
 chardet==4.0.0
-defusedxml==0.6.0
+country-bounding-boxes==0.2.3
+defusedxml==0.7.1
 django-allauth==0.42.0
 django-appconf==1.0.4
 django-cookie-consent==0.2.6
@@ -12,14 +13,19 @@ django-summernote==0.8.11.6
 django-taggit==1.3.0
 django==2.2.16
 djangorestframework==3.11.0
+flashtext==2.7
 gunicorn==20.0.4
 idna==2.10
+iso3166==1.0.1
+numpy==1.20.1
 oauthlib==3.1.0
-packaging==20.8
+packaging==20.9
+pandas==1.2.3
 pillow==8.0.1
 pyparsing==2.4.7
+python-dateutil==2.8.1
 python3-openid==3.2.0
-pytz==2020.5
+pytz==2021.1
 pyyaml==5.3.1
 requests-oauthlib==1.3.0
 requests==2.25.1
@@ -27,8 +33,8 @@ six==1.15.0
 sqlparse==0.4.1
 subdomains==3.0.1
 tornado==6.1
-urllib3==1.26.2
-watchdog==1.0.2
+urllib3==1.26.4
+watchdog==2.0.2
 webencodings==0.5.1
-websocket-client==0.57.0
+websocket-client==0.58.0
 wikidata==0.7.0
